--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>Descubre la Gongapa</h2>
                 <div class="dual-layout">
                     <div>
-                        <img src="gongapa-fruit-closeup.jpg" alt="Fruta Gongapa en primer plano" class="img-fluid rounded"> </div>
+                        <img src="gongapa-fruit-closeup.png" alt="Fruta Gongapa en primer plano" class="img-fluid rounded"> </div>
                     <div>
                         <h3>Un Regalo de los Andes</h3>
                         <p>La Gongapa es una fruta silvestre excepcional, prima hermana del arándano azul, que crece en las prístinas alturas de los Andes peruanos. Su sabor único, una mezcla de dulzor y acidez equilibrada, y su intenso color azul-morado la convierten en una joya de la naturaleza.</p>
@@ -98,7 +98,7 @@
                         <p>Creemos en el comercio justo y en el desarrollo de las comunidades que, con su sabiduría ancestral, cuidan de esta valiosa fruta. Al elegir Gongapa Andina, apoyas un modelo de producción responsable y consciente.</p>
                     </div>
                     <div>
-                         <img src="gongapa-andean-harvest.jpg" alt="Cosecha de Gongapa en los Andes" class="img-fluid rounded">
+                         <img src="gongapa-andean-harvest.png" alt="Cosecha de Gongapa en los Andes" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
