--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </button>
             <ul class="nav-menu" id="nav-menu-main">
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#descubre">Descubre Gongapa</a></li>
+                <li><a href="#descubre">Descubre AndeanBerry</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
                 <li><a href="#origen">Origen y Sostenibilidad</a></li>
                 <li><a href="#nosotros">Nuestra Historia</a></li>
@@ -155,14 +155,13 @@
         </section>
     </main>
 
-    <footer>
+   <footer>
         <div class="container">
             <div class="social-links">
-                <a href="URL_FACEBOOK_GONGAPA" target="_blank" aria-label="Facebook de Gongapa Andina"><i class="fab fa-facebook-f"></i></a>
-                <a href="URL_INSTAGRAM_GONGAPA" target="_blank" aria-label="Instagram de Gongapa Andina"><i class="fab fa-instagram"></i></a>
-            </div>
-            <p>© <span id="year"></span> Gongapa Andina. Todos los derechos reservados. Perú.</p>
-        </div>
+                <a href="https://web.facebook.com/profile.php?id=61576767164844" target="_blank" aria-label="Facebook de Andean Berry"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/andeanberry/" target="_blank" aria-label="Instagram de Andean Berry"><i class="fab fa-instagram"></i></a>
+                </div>
+            <p>© <span id="year"></span> Andean Berry. Todos los derechos reservados. Perú.</p> </div>
     </footer>
 
     <a href="https://wa.me/51964604628?text=Hola%2C%20estoy%20interesado%20en%20la%20fruta%20Gongapa." class="whatsapp-float" target="_blank" aria-label="Contactar por WhatsApp">
