--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2>Descubre Andean Berry (Gongapa)</h2>
                 <div class="dual-layout">
                     <div>
-                        <img src="gongapa-fruit-closeup.jpg" alt="Fruta Gongapa en primer plano" class="img-fluid rounded">
+                        <img src="gongapa-fruit-closeup.png" alt="Fruta Gongapa en primer plano" class="img-fluid rounded">
                     </div>
                     <div>
                         <h3>Un Regalo de los Andes</h3>
@@ -70,7 +70,7 @@
                 <p class="section-intro">Nuestra Gongapa no es solo deliciosa, ¡está llena de vitalidad!</p>
                 <div class="feature-cards">
                     <div class="card">
-                        <img src="beneficio-antioxidantes.jpg" alt="Antioxidantes Naturales" class="card-img-top">
+                        <img src="beneficio-antioxidantes.png" alt="Antioxidantes Naturales" class="card-img-top">
                         <h3>Rica en Antioxidantes</h3>
                         <p class="card-short-desc">Al igual que los arándanos, Andean Berry (Gongapa) es una fuente poderosa de antioxidantes.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -79,7 +79,7 @@
                         <button class="btn btn-secondary read-more-btn">Leer Más</button>
                     </div>
                     <div class="card">
-                        <img src="beneficio-vitaminas.jpg" alt="Vitaminas y Minerales" class="card-img-top">
+                        <img src="beneficio-vitaminas.png" alt="Vitaminas y Minerales" class="card-img-top">
                         <h3>Fuente de Vitaminas y Minerales</h3>
                         <p class="card-short-desc">Aporta vitaminas y minerales esenciales para tu bienestar diario y energía.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -88,7 +88,7 @@
                         <button class="btn btn-secondary read-more-btn">Leer Más</button>
                     </div>
                     <div class="card">
-                        <img src="beneficio-sabor.jpg" alt="Sabor Único Andino" class="card-img-top">
+                        <img src="beneficio-sabor.png" alt="Sabor Único Andino" class="card-img-top">
                         <h3>Sabor Andino Excepcional</h3>
                         <p class="card-short-desc">Un perfil de sabor único que deleitará tu paladar de formas inesperadas y auténticas.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -106,21 +106,21 @@
                 <p class="section-intro">Descubre la frescura y el sabor auténtico de los Andes en cada producto.</p>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="gongapa-fresca.jpg" alt="Andean Berry (Gongapa) Fresca" class="product-image">
+                        <img src="gongapa-fresca.png" alt="Andean Berry (Gongapa) Fresca" class="product-image">
                         <h3>Andean Berry Fresca (500g)</h3>
                         <p class="product-price">S/ 15.00</p>
                         <p class="product-description">Deliciosas bayas de Gongapa recién cosechadas, listas para disfrutar.</p>
                         <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
                     </div>
                     <div class="product-card">
-                        <img src="mermelada-gongapa.jpg" alt="Mermelada de Andean Berry (Gongapa)" class="product-image">
+                        <img src="mermelada-gongapa.png" alt="Mermelada de Andean Berry (Gongapa)" class="product-image">
                         <h3>Mermelada de Andean Berry (250g)</h3>
                         <p class="product-price">S/ 12.00</p>
                         <p class="product-description">Mermelada artesanal hecha con Gongapas seleccionadas, perfecta para tus desayunos.</p>
                         <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
                     </div>
                     <div class="product-card">
-                        <img src="jugo-gongapa.jpg" alt="Jugo de Andean Berry (Gongapa)" class="product-image">
+                        <img src="jugo-gongapa.png" alt="Jugo de Andean Berry (Gongapa)" class="product-image">
                         <h3>Jugo Natural de Andean Berry (1L)</h3>
                         <p class="product-price">S/ 18.00</p>
                         <p class="product-description">Refrescante y nutritivo jugo 100% natural de Gongapa, sin aditivos.</p>
@@ -140,7 +140,7 @@
                         <p>Creemos en el comercio justo y en el desarrollo de las comunidades que, con su sabiduría ancestral, cuidan de esta valiosa fruta. Al elegir Andean Berry, apoyas un modelo de producción responsable y consciente.</p>
                     </div>
                     <div>
-                         <img src="andean-berry-harvest.jpg" alt="Cosecha de Andean Berry (Gongapa) en los Andes" class="img-fluid rounded">
+                         <img src="andean-berry-harvest.png" alt="Cosecha de Andean Berry (Gongapa) en los Andes" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
