--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#descubre">Descubre Andean Berry</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
-                <li><a href="#tienda">Tienda</a></li>
+                <li><a href="URL_DE_TU_TIENDA_SHOPIFY" target="_blank">Tienda</a></li>
                 <li><a href="#origen">Origen</a></li>
                 <li><a href="#nosotros">Nuestra Historia</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
             <div class="header-cart-icon">
-                <a href="#carrito" aria-label="Carrito de compras"> {/* En el futuro, esto podría enlazar a una página de carrito */}
+                <a href="URL_DE_TU_TIENDA_SHOPIFY/cart" target="_blank" aria-label="Carrito de compras">
                     <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-item-count">0</span>
                 </a>
             </div>
         </nav>
@@ -53,7 +52,7 @@
                 <h2>Descubre Andean Berry (Gongapa)</h2>
                 <div class="dual-layout">
                     <div>
-                        <img src="gongapa-fruit-closeup.png" alt="Fruta Gongapa en primer plano" class="img-fluid rounded">
+                        <img src="gongapa-fruit-closeup.jpg" alt="Fruta Gongapa en primer plano" class="img-fluid rounded">
                     </div>
                     <div>
                         <h3>Un Regalo de los Andes</h3>
@@ -70,7 +69,7 @@
                 <p class="section-intro">Nuestra Gongapa no es solo deliciosa, ¡está llena de vitalidad!</p>
                 <div class="feature-cards">
                     <div class="card">
-                        <img src="beneficio-antioxidantes.png" alt="Antioxidantes Naturales" class="card-img-top">
+                        <img src="beneficio-antioxidantes.jpg" alt="Antioxidantes Naturales" class="card-img-top">
                         <h3>Rica en Antioxidantes</h3>
                         <p class="card-short-desc">Al igual que los arándanos, Andean Berry (Gongapa) es una fuente poderosa de antioxidantes.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -79,7 +78,7 @@
                         <button class="btn btn-secondary read-more-btn">Leer Más</button>
                     </div>
                     <div class="card">
-                        <img src="beneficio-vitaminas.png" alt="Vitaminas y Minerales" class="card-img-top">
+                        <img src="beneficio-vitaminas.jpg" alt="Vitaminas y Minerales" class="card-img-top">
                         <h3>Fuente de Vitaminas y Minerales</h3>
                         <p class="card-short-desc">Aporta vitaminas y minerales esenciales para tu bienestar diario y energía.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -88,7 +87,7 @@
                         <button class="btn btn-secondary read-more-btn">Leer Más</button>
                     </div>
                     <div class="card">
-                        <img src="beneficio-sabor.png" alt="Sabor Único Andino" class="card-img-top">
+                        <img src="beneficio-sabor.jpg" alt="Sabor Único Andino" class="card-img-top">
                         <h3>Sabor Andino Excepcional</h3>
                         <p class="card-short-desc">Un perfil de sabor único que deleitará tu paladar de formas inesperadas y auténticas.</p>
                         <div class="card-full-desc" style="display: none;">
@@ -103,28 +102,28 @@
         <section id="tienda" class="content-section">
             <div class="container">
                 <h2>Nuestra Tienda Andean Berry</h2>
-                <p class="section-intro">Descubre la frescura y el sabor auténtico de los Andes en cada producto.</p>
+                <p class="section-intro">Descubre la frescura y el sabor auténtico de los Andes en cada producto. Haz tu compra de forma segura en nuestra tienda online.</p>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="gongapa-fresca.png" alt="Andean Berry (Gongapa) Fresca" class="product-image">
+                        <img src="gongapa-fresca.jpg" alt="Andean Berry (Gongapa) Fresca" class="product-image">
                         <h3>Andean Berry Fresca (500g)</h3>
-                        <p class="product-price">S/ 15.00</p>
+                        <p class="product-price">S/ 15.00 (Precio referencial)</p>
                         <p class="product-description">Deliciosas bayas de Gongapa recién cosechadas, listas para disfrutar.</p>
-                        <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+                        <a href="URL_DEL_PRODUCTO_FRUTA_FRESCA_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                     <div class="product-card">
-                        <img src="mermelada-gongapa.png" alt="Mermelada de Andean Berry (Gongapa)" class="product-image">
-                        <h3>Mermelada de Andean Berry (250g)</h3>
-                        <p class="product-price">S/ 12.00</p>
-                        <p class="product-description">Mermelada artesanal hecha con Gongapas seleccionadas, perfecta para tus desayunos.</p>
-                        <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+                        <img src="vino-gongapa.jpg" alt="Vino de Andean Berry" class="product-image">
+                        <h3>Vino de Andean Berry</h3>
+                        <p class="product-price">Consultar en tienda</p>
+                        <p class="product-description">Un vino excepcional con el sabor único y el color profundo de nuestras bayas andinas.</p>
+                        <a href="URL_DEL_PRODUCTO_VINO_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                     <div class="product-card">
-                        <img src="jugo-gongapa.png" alt="Jugo de Andean Berry (Gongapa)" class="product-image">
-                        <h3>Jugo Natural de Andean Berry (1L)</h3>
-                        <p class="product-price">S/ 18.00</p>
-                        <p class="product-description">Refrescante y nutritivo jugo 100% natural de Gongapa, sin aditivos.</p>
-                        <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+                        <img src="gongapa-deshidratada.jpg" alt="Gongapa Deshidratada" class="product-image">
+                        <h3>Andean Berry Deshidratada (150g)</h3>
+                        <p class="product-price">Consultar en tienda</p>
+                        <p class="product-description">Un snack saludable y lleno de antioxidantes, perfecto para llevar a todos lados.</p>
+                        <a href="URL_DEL_PRODUCTO_DESHIDRATADO_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +139,7 @@
                         <p>Creemos en el comercio justo y en el desarrollo de las comunidades que, con su sabiduría ancestral, cuidan de esta valiosa fruta. Al elegir Andean Berry, apoyas un modelo de producción responsable y consciente.</p>
                     </div>
                     <div>
-                         <img src="andean-berry-harvest.png" alt="Cosecha de Andean Berry (Gongapa) en los Andes" class="img-fluid rounded">
+                         <img src="andean-berry-harvest.jpg" alt="Cosecha de Andean Berry (Gongapa) en los Andes" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -149,10 +148,7 @@
          <section id="nosotros" class="content-section">
             <div class="container">
                 <h2>Nuestra Historia: Pasión por Andean Berry</h2>
-                <p class="section-intro">[Aquí puedes contar brevemente la historia de tu emprendimiento con Andean Berry (Gongapa). Por ejemplo: cómo descubriste la fruta, tu motivación, y la misión de la marca.]</p>
-                <div class="text-center">
-                    <p>Somos un equipo apasionado por los tesoros naturales del Perú y comprometidos con llevar lo mejor de los Andes al mundo, de una manera justa y sostenible.</p>
-                </div>
+                <p class="section-intro">Nuestra aventura con Andean Berry, o como la conocen ancestralmente en los Andes, la Gongapa, comenzó de una manera inesperada durante una de nuestras exploraciones por las alturas de Huánuco. Nos maravilló encontrar esta pequeña joya de color azul intenso, tan similar al arándano pero con un sabor y unas propiedades únicas que nos dejaron fascinados. Al conocer más sobre su valor para las comunidades locales y su rico potencial nutricional, sentimos una profunda motivación por compartir este tesoro andino con el mundo. Así nació Andean Berry, con la misión de ofrecer un producto auténtico, saludable y sostenible, que a su vez contribuya al bienestar de las familias agricultoras que cultivan esta maravilla natural.</p>
             </div>
         </section>
 
@@ -162,7 +158,7 @@
                 <p class="section-intro">¿Interesado en Andean Berry? ¿Tienes preguntas? ¡Nos encantaría escucharte!</p>
                 <div class="contact-main-area">
                     <div class="contact-form-container">
-                        <form class="contact-form" action="TU_NUEVO_ENDPOINT_DE_FORMSPREE_PARA_ANDEAN_BERRY" method="POST">
+                        <form class="contact-form" action="TU_ENDPOINT_DE_FORMSPREE" method="POST">
                             <div class="form-group">
                                 <label for="contact-nombre-andeanberry">Nombre:</label>
                                 <input type="text" id="contact-nombre-andeanberry" name="nombre" placeholder="Tu Nombre Completo" required>
