--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
             <div class="header-cart-icon">
-                <a href="URL_DE_TU_TIENDA_SHOPIFY/cart" target="_blank" aria-label="Carrito de compras">
+                <a href="https://andeanberry.myshopify.com/" target="_blank" aria-label="Carrito de compras">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </div>
@@ -109,21 +109,21 @@
                         <h3>Andean Berry Fresca (500g)</h3>
                         <p class="product-price">S/ 15.00 (Precio referencial)</p>
                         <p class="product-description">Deliciosas bayas de Gongapa recién cosechadas, listas para disfrutar.</p>
-                        <a href="URL_DEL_PRODUCTO_FRUTA_FRESCA_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
+                        <a href="https://andeanberry.myshopify.com/products/gongapa-fresca" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                     <div class="product-card">
                         <img src="vino-gongapa.png" alt="Vino de Andean Berry" class="product-image">
                         <h3>Vino de Andean Berry</h3>
                         <p class="product-price">Consultar en tienda</p>
                         <p class="product-description">Un vino excepcional con el sabor único y el color profundo de nuestras bayas andinas.</p>
-                        <a href="URL_DEL_PRODUCTO_VINO_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
+                        <a href="https://andeanberry.myshopify.com/products/vino-de-andean-berry" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                     <div class="product-card">
                         <img src="gongapa-deshidratada.png" alt="Gongapa Deshidratada" class="product-image">
                         <h3>Andean Berry Deshidratada (150g)</h3>
                         <p class="product-price">Consultar en tienda</p>
                         <p class="product-description">Un snack saludable y lleno de antioxidantes, perfecto para llevar a todos lados.</p>
-                        <a href="URL_DEL_PRODUCTO_DESHIDRATADO_EN_SHOPIFY" target="_blank" class="btn btn-primary">Ver en Tienda</a>
+                        <a href="https://andeanberry.myshopify.com/products/andean-berry-deshidratada" target="_blank" class="btn btn-primary">Ver en Tienda</a>
                     </div>
                 </div>
             </div>
