--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#descubre">Descubre Andean Berry</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
-                <li><a href="URL_DE_TU_TIENDA_SHOPIFY" target="_blank">Tienda</a></li>
+                <li><a href="https://andeanberry.myshopify.com/" target="_blank">Tienda</a></li>
                 <li><a href="#origen">Origen</a></li>
                 <li><a href="#nosotros">Nuestra Historia</a></li>
                 <li><a href="#contacto">Contacto</a></li>
